@@ -3,6 +3,11 @@
 . /etc/profile
 oe_setup_addon service.couchpotato
 
+if [ -z "$cp_nice" ]; then
+  cp_nice="0"
+fi
+
+nice -n "$cp_nice" \
 python $ADDON_DIR/CouchPotato/CouchPotato.py \
        --config_file $ADDON_HOME/settings.conf \
        --data_dir $ADDON_HOME
